crates/saya-cli/src/snapshots/saya_cli__approval_facts_tests__http_download_prompt_pins_the_remaining_budget.snap
---
source: crates/saya-cli/src/approval_facts_tests.rs
assertion_line: 183
expression: prompt
---
http_download — downloads into this session's workspace
  url: https://example.com/model.bin
  destination: artifacts/model.bin — contained to the workspace root
  remaining download budget: 1073741824 bytes of 1073741824
[a] allow once   [s] allow fetch:https+example.com for this session   [d] deny
