crates/saya-cli/src/snapshots/saya_cli__approval_facts_tests__run_program_prompt_pins_the_program_s_facts.snap
---
source: crates/saya-cli/src/approval_facts_tests.rs
expression: prompt
---
run_program — bench
  program: bench — allowlisted in [jobs.runner] allow
  argv: bench --json --out state/bench.json
  typed argv: no shell, no interpolation, one element per argument
  sandbox: reads/writes/exec bounded to /home/user/proj · egress: none · cwd pinned to /home/user/proj
  timeout: 120s — the call may narrow it, never widen it
  credential injection: none declared
  output: capped at 65536 bytes per stream · redacted before it reaches the model
  [s] covers bench with any arguments for this session — not just this argv
[a] allow once   [s] allow runner:bench for this session   [d] deny
