crates/saya-cli/src/snapshots/saya_cli__approval_facts_tests__workspace_write_prompt_pins_the_containment_facts.snap
---
source: crates/saya-cli/src/approval_facts_tests.rs
assertion_line: 147
expression: prompt
---
workspace_write — writes into this session's workspace
  path: notes/summary.md
  bytes: 11 · per-write bound: 65536 bytes (over the bound the call refuses whole)
  containment: absolute paths, `..` escapes, and symlinks are refused · the write is atomic — an existing file is replaced whole, never partially
[a] allow once   [s] allow workspace-write for this session   [d] deny
